--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -4,6 +4,8 @@ version: '2.1'
 services:
   postgres:
     image: 'postgres:latest'
+    volumes:
+    - ./postgres-data:/var/lib/postgresql/data
     container_name: db_postgres
     environment:
       - POSTGRES_PASSWORD=postgres
